Topic screen fully working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pgame">
         <activity
+            android:name=".Topic"
+            android:exported="true" />
+        <activity
             android:name=".GameOver"
             android:exported="true" />
         <activity
